fix: text embedding

--- a/models/embedding.ipynb
+++ b/models/embedding.ipynb
@@ -2,30 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "13f415df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/salsabiila/miniconda3/envs/ml_venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-05-31 17:05:44.859136: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-05-31 17:05:45.108112: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1748685945.211500    1932 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1748685945.246247    1932 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1748685945.481291    1932 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1748685945.481370    1932 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1748685945.481372    1932 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1748685945.481374    1932 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-05-31 17:05:45.512379: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sentence_transformers import SentenceTransformer\n",
@@ -36,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ef24eb18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "CSV_SYMPTOMS_FILE_PATH = '../data/symptoms_1.csv'\n",
-    "SYMPTOM_COLUMN_NAME = 'Description'\n",
-    "OUTPUT_CSV_WITH_EMBEDDINGS_PATH = '../data/symptoms_1_with_embeddings.csv'\n",
+    "CSV_SYMPTOMS_FILE_PATH = '../data/symptoms.csv'\n",
+    "SYMPTOM_COLUMN_NAME = 'name'\n",
+    "OUTPUT_CSV_WITH_EMBEDDINGS_PATH = '../data/symptoms_with_embeddings.csv'\n",
     "\n",
     "MODEL_NAME = 'all-MiniLM-L6-v2'\n",
     "PRECOMPUTED_EMBEDDINGS_FILE = 'predefined_symptom_embeddings.npy'\n",
@@ -52,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "95bf3b22",
    "metadata": {},
    "outputs": [],
@@ -70,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6545cb54",
    "metadata": {},
    "outputs": [],
@@ -106,7 +86,7 @@
     "                f.write(f\"{symptom}\\n\")\n",
     "        print(f\"Predefined symptom labels saved to {PREDEFINED_SYMPTOMS_LABELS_FILE} (for mapper)\")\n",
     "\n",
-    "        symptoms_df['embedding'] = [str(embedding.tolist()) for embedding in symptom_embeddings_np]\n",
+    "        symptoms_df['value'] = [str(embedding.tolist()) for embedding in symptom_embeddings_np]\n",
     "        \n",
     "        # embedding_df = pd.DataFrame(symptom_embeddings_np, columns=[f'embed_{i}' for i in range(symptom_embeddings_np.shape[1])])\n",
     "        # symptoms_df = pd.concat([symptoms_df, embedding_df], axis=1)\n",
@@ -122,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a3075964",
    "metadata": {},
    "outputs": [],
@@ -148,7 +128,7 @@
     "        print(\"Predefined symptom labels loaded.\")\n",
     "        print(f\"Mapper initialized with {len(self.predefined_symptoms)} predefined symptoms.\")\n",
     "\n",
-    "    def map_symptoms(self, user_input_text, top_n=3, threshold=0.5):\n",
+    "    def map_symptoms(self, user_input_text, top_n=10, threshold=0.5):\n",
     "        if not user_input_text.strip():\n",
     "            return []\n",
     "        user_embedding = self.model.encode([user_input_text])\n",
@@ -169,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "94b1692a",
    "metadata": {},
    "outputs": [
@@ -178,18 +158,18 @@
      "output_type": "stream",
      "text": [
       "--- Starting Symptom Data and Embedding Setup ---\n",
-      "Successfully loaded DataFrame from ../data/symptoms_1.csv\n",
-      "Loaded 837 symptoms for embedding.\n",
+      "Successfully loaded DataFrame from ../data/symptoms.csv\n",
+      "Loaded 132 symptoms for embedding.\n",
       "Loading model: all-MiniLM-L6-v2...\n",
       "Model loaded.\n",
-      "Generating embeddings for 837 predefined symptoms...\n"
+      "Generating embeddings for 132 predefined symptoms...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Batches: 100%|██████████| 27/27 [00:01<00:00, 19.83it/s]\n"
+      "Batches: 100%|██████████| 5/5 [00:00<00:00, 15.73it/s]\n"
      ]
     },
     {
@@ -198,7 +178,7 @@
      "text": [
       "Predefined symptom embeddings saved to predefined_symptom_embeddings.npy (for mapper)\n",
       "Predefined symptom labels saved to predefined_symptoms_labels.txt (for mapper)\n",
-      "DataFrame with embeddings saved to: ../data/symptoms_1_with_embeddings.csv\n",
+      "DataFrame with embeddings saved to: ../data/symptoms_with_embeddings.csv\n",
       "--- Symptom Data and Embedding Setup Complete ---\n",
       "Loading model: all-MiniLM-L6-v2 for the mapper...\n",
       "Model loaded.\n",
@@ -206,16 +186,13 @@
       "Precomputed embeddings loaded.\n",
       "Loading predefined symptom labels from predefined_symptoms_labels.txt...\n",
       "Predefined symptom labels loaded.\n",
-      "Mapper initialized with 837 predefined symptoms.\n",
+      "Mapper initialized with 132 predefined symptoms.\n",
       "\n",
       "For input: 'I have a terrible headache and I'm feeling feverish.'\n",
-      "- Headache behind the eyes (typically during fever) (Score: 0.6642)\n",
-      "- fever (Score: 0.6497)\n",
-      "- Fever with chills and sweating (Score: 0.6205)\n",
+      "No significant symptoms mapped.\n",
       "\n",
       "For input: 'my stomach feels upset and i might throw up'\n",
-      "- Nausea and vomiting (Score: 0.6961)\n",
-      "- Vomiting (Score: 0.6379)\n"
+      "No significant symptoms mapped.\n"
      ]
     }
    ],
@@ -259,8 +236,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "332b4ad3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "For input: 'duh badan saya panas dan saya sakit kepala terus'\n",
+      "- sakit kepala (Score: 0.6979)\n",
+      "- penurunan berat badan (Score: 0.5757)\n",
+      "- kenaikan berat badan (Score: 0.5691)\n",
+      "\n",
+      "For input: 'kayaknya saya mau muntah, perut saya tidak enak'\n",
+      "- kadar gula tidak teratur (Score: 0.6224)\n",
+      "- ketidaknyamanan kandung kemih (Score: 0.6027)\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_query3 = \"duh badan saya panas dan saya sakit kepala terus\"\n",
+    "matches3 = mapper.map_symptoms(user_query3, top_n=3, threshold=0.3)\n",
+    "print(f\"\\nFor input: '{user_query3}'\")\n",
+    "if matches3:\n",
+    "    for symptom, score in matches3:\n",
+    "        print(f\"- {symptom} (Score: {score:.4f})\")\n",
+    "else:\n",
+    "    print(\"No significant symptoms mapped.\")\n",
+    "\n",
+    "user_query4 = \"kayaknya saya mau muntah, perut saya tidak enak\"\n",
+    "matches4 = mapper.map_symptoms(user_query4, top_n=2, threshold=0.4)\n",
+    "print(f\"\\nFor input: '{user_query4}'\")\n",
+    "if matches4:\n",
+    "    for symptom, score in matches4:\n",
+    "        print(f\"- {symptom} (Score: {score:.4f})\")\n",
+    "else:\n",
+    "    print(\"No significant symptoms mapped.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cbd268f",
    "metadata": {},
    "outputs": [],
    "source": []
